--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img\imagen gota.png">
     <title>Desafío 1: Wireframe y estructura del proyecto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
 
 </head>
@@ -37,13 +38,44 @@
         </header>
 
         <div class="portada" id="portada">
-            <div id="texto">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, neque. Sequi voluptatibus saepe veritatis pariatur!</p>
-                <button class="btn">
-                    <a href="#contacto"  class="nav.link"> Contactanos! </a>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="img/portada2.jpg" class="d-block w-100" alt="portada2">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Beneficios para la piel</h5>
+                      <p>El agua es un reemplazo perfecto para los caros tratamientos antienvejecimiento. Mantiene la piel bien hidratada y brillante, mejorando así la tez. Para una piel suave y flexible, beber una cantidad adecuada de agua es más importante que aplicar cremas tópicas.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="img/portada4.jpg" class="d-block w-100" alt="portada2">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Alivia la fatiga</h5>
+                      <p>El agua es utilizada por el cuerpo para eliminar toxinas y productos de desecho que éste no necesita. Cuando hay menos agua en el cuerpo, el corazón tiene que trabajar más para bombear la sangre oxigenada a todas las células y otros órganos principales y eso puede causar fatiga.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/portada5.jpg" class="d-block w-100" alt="portada5">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Mantené tu cuerpo hidratado</h5>
+                      <p>El agua es un reemplazo perfecto para los caros tratamientos antienvejecimiento. Mantiene la piel bien hidratada y brillante, mejorando así la tez. Para una piel suave y flexible, beber una cantidad adecuada de agua es más importante que aplicar cremas tópicas.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
                 </button>
-            </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>
 
         <div class="nosotros" id="nosotros">
@@ -134,7 +166,7 @@
 
         <div class="contacto" id="contacto">
             <form>
-                <fieldset>
+                <fieldset class="fieldset">
                     <legend>Formulario de contacto</legend>
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre">
@@ -210,7 +242,7 @@
                     </select>
                     <br>
                     <br>
-                    <input type="submit" value="Enviar">
+                    <input class="btn btn-primary" type="enviar" value="Enviar">
                 </fieldset>
             </form>
         </div>
