Desafío SASS II + SEO

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Desafío 1: Wireframe y estructura del proyecto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
-
+    <meta name="description" content="Este es un sitio web que comercializa servicios de entrega a domicilio de agua y sodas. Se pueden solicitar presupuestos, ver los productos a disposición, conocer sobre nosotros y contactarnos" >
+    <meta name= "keywords" content="AGUA, SODA, DOMICILIO, SODERO, AGUATERO, CAPITAL FEDERAL, CABA, ENTREGA, ENTREGA A DOMICILIO, PUERTA, ALQUILER, MAQUINA, AGUA, FRIO, CALOR">
 </head>
 
 <body class="body">
     <div class="container">
         <header class="header" id="header">
             <a href="index.html" class="logo">
-                <img src="img\logo2.jpg" alt="logo" class="logo-img">
+                <img src="img/logo2.jpg" alt="logo" class="logo-img">
             </a>
             <h1 class="titulo">
                 Distribuidora Ledesma
@@ -130,16 +131,19 @@
                         <img src="img/bidon_6lts.jpg" alt="ejemplo">
                         <h4>Bidon Agua 6Lts Descartable</h4>
                         <p>Precio: $120</p>
+                        <input class="btn-primary" type="submit" value="Consultar" >
                     </div>
                     <div id="productos-columna">
                         <img src="img/bidon_12lts.jpg" alt="ejemplo">
                         <h4>Bidon Agua 12Lts Retornable</h4>
                         <p>Precio: $200</p>
+                        <input class="btn-secondary" type="submit" value="Consultar">
                     </div>
                     <div id="productos-columna">
                         <img src="img/bidon_20lts3.jpg" alt="ejemplo">
                         <h4>Bidon Agua 20Lts Retornable</h4>
                         <p>Precio: $300</p>
+                        <input class="btn-secondary" type="submit" value="Consultar">
                     </div>
                 </div>
 
@@ -149,16 +153,19 @@
                         <img src="img/soda.jpg" alt="ejemplo">
                         <h4>Pack 6 Sifones Soda</h4>
                         <p>Retornable. Precio: $140</p>
+                        <input class="btn-secondary" type="submit" value="Consultar">
                     </div>
                     <div id="productos-columna">
                         <img src="img/botellaagua_x6.jpg" alt="ejemplo">
                         <h4>Pack 6 Botellas de agua descartable</h4>
                         <p>Descartable. Precio: $180</p>
+                        <input class="btn-secondary" type="submit" value="Consultar">
                     </div>
                     <div id="productos-columna">
                         <img src="img/maquina.jpg" alt="ejemplo">
                         <h4>Alquiler Maquina Agua Frio/Calor por MES + 4 bidones 20Lts</h4>
                         <p>Alquielr Mensual. Precio: $2500</p>
+                        <input class="btn-secondary" type="submit" value="Consultar">
                     </div>
                 </div>
             </div>
@@ -242,7 +249,7 @@
                     </select>
                     <br>
                     <br>
-                    <input class="btn btn-primary" type="enviar" value="Enviar">
+                    <input class="btn btn-primary" type="submit" value="Enviar">
                 </fieldset>
             </form>
         </div>
