correcciónes entrega final

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <option value="016">Liniers</option>
                             <option value="017">Mataderos</option>
                             <option value="018">Monte Castro</option>
-                            <option value="019">Monserrat (originalmente llamado Montserrat).</option>
+                            <option value="019">Monserrat</option>
                             <option value="020">Nueva Pompeya</option>
                             <option value="021">Núñez</option>
                             <option value="022">Palermo</option>
@@ -292,14 +292,16 @@
 
             <footer class="footer">
                 <div class="logo">
-                    <img src="img\logo2.jpg" alt="logo" class="logo-img">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/logo2.jpg" alt="marca institucional" width="80" height="alto">
+                    </a>
                 </div>
-                <div id="redesfooter">
-                    <h3>REDES SOCIALES</h3> 
-                </div>
-                <div id="contactofooter">
-                    <h3>INFORMACIÓN DE CONTACTO</h3>
-                </div>
+                <div id="redes">
+                      <img src="img/facebook.png" class="rounded" alt="facebook" height="auto">
+                      <img src="img/twitter.jpg" class="rounded" alt="twitter" height="auto"><br>
+                      <img src="img/instagram.jpg" class="rounded" alt="instagram" height="auto">
+                      <img src="img/wtsp.png" class="rounded" alt="wtsp" height="auto"> 
+                  </div>
                 <div id="mapafooter">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52571.73953870067!2d-58.492809616437114!3d-34.56029679999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb680daf6c9cf%3A0xca160d33b0ce5321!2sEmbotelladora%20Agua%20y%20Soda%20Cimes!5e0!3m2!1ses-419!2sar!4v1649630612918!5m2!1ses-419!2sar" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
